force-app/main/default/objects/Case_Stage_Timer__c/Case_Stage_Timer__c.object-meta.xml
<CustomObject>
    <label>Case Stage Timer</label>
    <nameField>
        <displayFormat>CST{0000000}-{YYYY}</displayFormat>
        <label>Case Stage Timer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Stage Timers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>