force-app/main/default/objects/Case_Stage_Timer__c/fields/Stage_End__c.field-meta.xml
<CustomField>
    <fullName>Stage_End__c</fullName>
    <label>Stage End</label>
    <type>DateTime</type>
</CustomField>