force-app/main/default/objects/Case_Stage_Timer__c/fields/Stage_Start__c.field-meta.xml
<CustomField>
    <fullName>Stage_Start__c</fullName>
    <label>Stage Start</label>
    <type>DateTime</type>
</CustomField>