force-app/main/default/objects/Case_Stage_Timer__c/fields/Time_with_Insurer_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_with_Insurer_Business_Days__c</fullName>
    <formula>(5 * FLOOR( ( DATEVALUE(Stage_End__c  ) - DATE( 1900, 1, 8) ) / 7 ) 
    + MIN( 5, MOD( DATEVALUE(Stage_End__c  ) - DATE( 1900, 1, 8), 7 )  ) 
) - 
(5 * FLOOR( ( DATEVALUE(Stage_Start__c  )- DATE( 1900, 1, 8) ) / 7 ) 
      + MIN( 5, MOD( DATEVALUE(Stage_Start__c  )- DATE( 1900, 1, 8), 7 ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time with Insurer (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>