force-app/main/default/objects/Case_Stage_Timer__c/fields/Time_with_Insurer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_with_Insurer_Hours__c</fullName>
    <formula>ROUND( 8.5 * (
   ( 5 * FLOOR( ( Stage_End__c  - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos;) ) / 7) +
    MIN(5, 
     FLOOR ( MOD ( Stage_End__c  - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos;), 7) / 1) +
     MIN( 1, 24 / 8.5 * ( MOD( Stage_End__c  - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( Stage_Start__c  - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos;) ) / 7) +
     MIN( 5,
      FLOOR( MOD( Stage_Start__c  - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos;), 7) / 1) +
      MIN( 1, 24 / 8.5 * ( MOD( Stage_Start__c  - DATETIMEVALUE( &apos;1900-01-08 08:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time with Insurer (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>