force-app/main/default/objects/Case_Stage_Timer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Stage_Start__c</columns>
    <columns>Stage_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>